--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 </body>
-
+<ul>
+    <li><a href="Home">Home</a></li>
+    <li><a href="About me">About me</a></li>
+    <li><a href="Contact">Contact</a></li>
+</ul>
 </body>
 </html>
