--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> personal website</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 </body>
 <ul>
     <li><a href="Home">Home</a></li>
     <li><a href="About me">About me</a></li>
-    <li><a href="Contact">Contact</a></li>
-    <ul><a href=" family">family</a></ul>
+    <li><a href=" family">family</a></li>
 </ul>
 </body>
 </html>
