--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> personal website</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-</body>
-<ul>
-    <li><a href="Home">Home</a></li>
-    <li><a href="About me">About me</a></li>
-    <li><a href=" family">family</a></li>
-</ul>
-</body>
+  <head>
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <title>personal website</title>
+    <link rel="stylesheet" href="style.css" >
+  </head>
+  <body>
+    <section class="header">
+      <nav>
+        <div class="nav-links">
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">family</a></li>
+            <li><a href="">contact</a></li>
+          </ul>
+        </div>
+      </nav>
+    </section>
+  </body>
 </html>
