--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>personal website</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="style.css" >
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
   </head>
   <body>
     <section class="header">
@@ -22,5 +22,9 @@
         </div>
       </nav>
     </section>
+    <div class="text-box">
+     <h1>About me</h1>
+     <p>I am the youngest out of my 2 siblings. I was born and raised in california recently moved to arizona in 2021. wanted to become a motorcycle mechanic but decided to work on my cars and motorcycle on my own. so i decided to go into the tech industry..</p>
+</div>
   </body>
 </html>
