--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
         <div class="nav-links">
           <ul>
             <li><a href="home.html">HOME</a></li>
-            <li><a href="About.html">ABOUT</a></li>
+            <li><a href="games.html">GAMES</a></li>
             <li><a href="family.html">FAMILY</a></li>
+            <li><a href="About.html">ABOUT</a></li>
             <li><a href="contact.html">CONTACT</a></li>
           </ul>
         </div>
