focusing on the games page

--- a/games.html
+++ b/games.html
@@ -21,5 +21,12 @@
         </div>
       </nav>
     </section>
+    <div class="videogames">
+      <h1>video games</h1>
+      <p>
+        theres a lot of game franshice that i like from NSF, Diablo, Resident
+        Evil, Uncharted and much more.
+      </p>
+    </div>
   </body>
 </html>
