working on the home page added some photos

--- a/home.html
+++ b/home.html
@@ -25,5 +25,9 @@
       <h1>WELCOME TO MY WEBSITE</h1>
       <p>Where you get to know more about devan gaddi</p>
     </div>
+    <div class="brother">
+      <h2>this is my brother</h2>
+    </div>
+    <img src="brother.png" />
   </body>
 </html>
