delete the contact and some photos

--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="header">
+    <section class="bar">
       <nav>
         <div class="nav-links">
           <ul>
@@ -16,7 +16,6 @@
             <li><a href="games.html">GAMES</a></li>
             <li><a href="family.html">FAMILY</a></li>
             <li><a href="About.html">ABOUT</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
           </ul>
         </div>
       </nav>
@@ -25,9 +24,13 @@
       <h1>WELCOME TO MY WEBSITE</h1>
       <p>Where you get to know more about devan gaddi</p>
     </div>
-    <div class="brother">
-      <h2>this is my brother</h2>
+    <div class="row">
+      <div class="column"></div>
+      <img src="brother.png" alt="brother" width="52.25%" height="55%" />
+      <div class="column">
+        <img src="sister.png" alt="sister" />
+        <div class="brother"></div>
+      </div>
     </div>
-    <img src="brother.png" />
   </body>
 </html>
