--- a/About.html
+++ b/About.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="header">
+    <section class="bar">
       <nav>
         <div class="nav-links">
           <ul>
@@ -16,7 +16,6 @@
             <li><a href="games.html">GAMES</a></li>
             <li><a href="family.html">FAMILY</a></li>
             <li><a href="About.html">ABOUT</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
           </ul>
         </div>
       </nav>
