--- a/games.html
+++ b/games.html
@@ -27,5 +27,10 @@
         Evil, Uncharted and much more.
       </p>
     </div>
+    <div class="container">
+      <img src="NFS.jpg" alt="NFS" width="50%" />
+      <img src="resident.png" alt="resident" width="50%" />
+      <img src="Diablo.webp" alt="Diablo" width="50%" />
+    </div>
   </body>
 </html>
