--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
     </div>
     <div class="row">
       <div class="column"></div>
-      <img src="brother.png" alt="brother" width="52.25%" height="55%" />
+      <img src="brother.png" alt="brother" width="52.25%" />
       <div class="column">
         <img src="sister.png" alt="sister" />
         <div class="brother"></div>
