--- a/family.html
+++ b/family.html
@@ -20,5 +20,12 @@
         </div>
       </nav>
     </section>
+    <div class="FAMILY">
+      <h1>MY FAMILY</h1>
+    </div>
+
+    <div class="family">
+      <img src="fav.JPG" alt="fav" width="50%" />
+    </div>
   </body>
 </html>
