finsihed the game section

--- a/games.html
+++ b/games.html
@@ -27,10 +27,56 @@
         Evil, Uncharted and much more.
       </p>
     </div>
-    <div class="container">
-      <img src="NFS.jpg" alt="NFS" width="50%" />
+    <div class="container"></div>
+    <div class="boxed-info">
+      <img src="NFS.jpg" alt="NFS" width="15%" />
+      <div class="text-nfs">
+        <h2>Racing</h2>
+        <p>
+          i started playing racing games when i was young. when i first started
+          i didnt know how to play so i did what ever i feel like untill my
+          brother showed me how to play correctly and it became really fun. i
+          start racing people and started driving away from the cops (in game
+          not in real life)
+        </p>
+      </div>
+    </div>
+    <div class="boxed-info">
+      <div class="text-D1">
+        <h2>Diablo</h2>
+        <p>
+          diablo which stand for the devil. is hand down one of my favorite
+          games ever i can never get sick of the game there are about 6
+          charaters you can choose from it and build the most overpower gear and
+          try to get to the highest difficulty ever in the game. diablo 2 and 3
+          is my favorite one so far and i cant wait for the 4th one to come out!
+        </p>
+      </div>
       <img src="Diablo.webp" alt="Diablo" width="50%" />
+    </div>
+    <div class="boxed-info">
       <img src="resident.png" alt="resident" width="56%" />
+      <div class="text-res">
+        <h2>Resident Evil</h2>
+        <p>
+          resident evil is a fun game to play with someone because there are
+          some places you need help to fight certain boss and you can stragized
+          with them on how to kill them. they made lots of movies about the game
+          and some tv shows about it all taking place in racoon city
+        </p>
+      </div>
+    </div>
+    <div class="boxed-info">
+      <div class="text-uncharted">
+        <h2>Action game</h2>
+        <p>
+          The Uncharted games are known for their cinematic presentation,
+          engaging storytelling, and exciting gameplay. The series features a
+          mix of exploration, puzzle-solving, and third-person shooting, with a
+          heavy emphasis on character development and narrative. a movie
+          recently came out about the game tom holland and mark wahlberg
+        </p>
+      </div>
       <img src="uncharted.webp" alt="uncharted" width="60%" />
     </div>
   </body>
