added photos to my about page

--- a/About.html
+++ b/About.html
@@ -29,5 +29,8 @@
         own. so i decided to go into the tech industry..
       </p>
     </div>
+    <img src="motorcycle.JPG" alt="motorcycle" width="35%" />
+    <img src="cafe.jpg" alt="cafe" width="35%" />
+    <img src="LA.jpg" alt="LA" width="29%" />
   </body>
 </html>
