--- a/About.html
+++ b/About.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>About</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" >
   </head>
   <body>
     <section class="bar">
@@ -23,14 +23,14 @@
     <div class="text-box">
       <h1>About me</h1>
       <p>
-        I am the youngest out of my 2 siblings. I was born and raised in
+        I am the youngest out of my 2 siblings we are 4 years apart and 8 years apart. I was born and raised in
         california recently moved to arizona in 2021. wanted to become a
         motorcycle mechanic but decided to work on my cars and motorcycle on my
         own. so i decided to go into the tech industry..
       </p>
     </div>
-    <img src="motorcycle.JPG" alt="motorcycle" width="35%" />
-    <img src="cafe.jpg" alt="cafe" width="35%" />
-    <img src="LA.jpg" alt="LA" width="29%" />
+    <img src="motorcycle.JPG" alt="motorcycle" width="35%" >
+    <img src="cafe.jpg" alt="cafe" width="35%" >
+    <img src="LA.jpg" alt="LA" width="29%" >
   </body>
 </html>
