--- a/games.html
+++ b/games.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" >
   </head>
   <body>
     <section class="bar">
@@ -28,7 +28,7 @@
       </p>
     </div>
     <div class="boxed-info">
-      <img src="NFS.jpg" alt="NFS" width="15%" />
+      <img src="NFS.jpg" alt="NFS" width="15%" >
       <div class="text-nfs">
         <h2>Racing</h2>
         <p>
@@ -51,10 +51,10 @@
           is my favorite one so far and i cant wait for the 4th one to come out!
         </p>
       </div>
-      <img src="Diablo.webp" alt="Diablo" width="50%" />
+      <img src="Diablo.webp" alt="Diablo" width="50%" >
     </div>
     <div class="boxed-info">
-      <img src="resident.png" alt="resident" width="56%" />
+      <img src="resident.png" alt="resident" width="56%" >
       <div class="text-res">
         <h2>Resident Evil</h2>
         <p>
@@ -76,7 +76,7 @@
           recently came out about the game tom holland and mark wahlberg
         </p>
       </div>
-      <img src="uncharted.webp" alt="uncharted" width="60%" />
+      <img src="uncharted.webp" alt="uncharted" width="60%" >
     </div>
   </body>
 </html>
