--- a/family.html
+++ b/family.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>family</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" >
   </head>
   <body>
     <section class="bar">
@@ -25,7 +25,7 @@
     </div>
 
     <div class="family">
-      <img src="fav.JPG" alt="fav" width="50%" />
+      <img src="fav.JPG" alt="fav" width="50%" >
     </div>
   </body>
 </html>
