--- a/home.html
+++ b/home.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Home</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" >
   </head>
   <body>
     <section class="bar">
@@ -26,9 +26,9 @@
     </div>
     <div class="row">
       <div class="column"></div>
-      <img src="brother.png" alt="brother" width="52.25%" />
+      <img src="brother.png" alt="brother" width="52.25%" >
       <div class="column">
-        <img src="sister.png" alt="sister" />
+        <img src="sister.png" alt="sister" >
         <div class="brother"></div>
       </div>
     </div>
